# GPS_GENERATOR

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  vis_notebook.ipynb
.github/workflows/: docker_build.yml  gh_pages.yml
LICENSE_DOCS/: index.html
aknowledgement/: index.html
archive/: gps_data_step_by_step_example_random_plot.ipynb
config/: config.yaml
configs/: config_example.yaml
dev_guide/: index.html
dev_guide/contribution/: index.html
dev_guide/setup/: index.html
docs/: aknowledgement.md  index.md  license_for_docs.md  overview.md  user_manual.md
docs/dev_guide/: contribution.md  index.md  setup.md
gps_synth/: main.py
gps_synth/common/: abs_user.py  columns.py  functions.py
gps_synth/gps_generator/: __init__.py  gps_generator.py
gps_synth/network/: __init__.py  network.py
gps_synth/user/: __init__.py  user.py  user_employed_walk.py  user_walk.py
gps_synth_test/: .env  env.yml  experiment.py  main.py  main_2.py
gps_synth_test/common/: columns.py  functions.py
gps_synth_test/gps_generator/: __init__.py  gps_generator.py
gps_synth_test/network/: __init__.py  network.py
gps_synth_test/user/: __init__.py  user.py
notebooks/: vis_notebook.ipynb
overview/: index.html
reference/SUMMARY/: index.html
reference/common/abs_user/: index.html
reference/common/columns/: index.html
reference/common/functions/: index.html
reference/gps_generator/: index.html
reference/gps_generator/gps_generator/: index.html
reference/main/: index.html
reference/network/: index.html
reference/network/network/: index.html
reference/user/: index.html
reference/user/user_employed_walk/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
user_manual/: index.html
