[tool.poetry]
name = "gps_synth"
version = "1.0.0"
description = "Python package to generate GPS synthetic data"
authors = ["Nikolay Kozlovskiy <nikolajkozlovskij73@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"
geopandas = "0.14.4"
osmnx = "1.6.0"
scipy = "1.11.3"
pyarrow = "13.0.0"
PyYAML = "6.0.1"
black = "^24.8.0"
isort = "^5.13.2"
pylint = "^3.2.7"
pre-commit = "^3.8.0"

[tool.poetry.group.vis]
optional = true

[tool.poetry.group.vis.dependencies]
jupyterlab = "3.6.3"
plotly = "5.16.1"
seaborn = "0.12.2"
matplotlib = "^3.5.2"
ipyleaflet = "0.17.3"
keplergl = "^0.3.2"
folium = "^0.12.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs="~1.5"
mkdocs-material="~9.5"
mkdocs-gen-files="~0.5"
mkdocs-literate-nav="~0.6"
mkdocs-section-index="~0.3"
mkdocs-nav-weight="~0.2"
mkdocstrings-python="~1.8"
griffe = "~0.37"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pylint.logging]

logging-format-style = "old" # old, new
logging-modules = ["logging"]

[tool.pylint.format]

max-line-length = "88"

[tool.pylint.messages_control]

disable = [
    "invalid-name",
    "missing-class-docstring",
    "missing-module-docstring",
    "missing-final-newline",
    "too-few-public-methods",
    "too-many-locals",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-positional-arguments",
]

[tool.pylint.miscellaneous]

notes = [
    "#TODO",
    "# TODO",
]

[tool.isort]
profile="black"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[project.urls]
GitHub = "https://github.com/NikolayKozlovskiy/GPS_GENERATOR"
Documentation = "https://nikolaykozlovskiy.github.io/GPS_GENERATOR/"